test/expected/declare_puw3.out
declare x as pointer to unsigned width 3 bits
                                 ^
34: error: invalid bit-field type "unsigned*"; must be an integral type
